--- a/MusicForum/Views/Home/Index.cshtml
+++ b/MusicForum/Views/Home/Index.cshtml
@@ -1,8 +1,22 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<MusicForum.Models.Discussion> 
+
+
+@{
+	ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Dylan's Music Forum'</h1>
+
+@foreach(var item in Model) {
+
+	<p>
+		@item.DiscussionId<br />
+		@item.Content<br />
+		@item.CreateDate<br />
+		@item.ImageFileName<br />
+
+
+	</p>
+
+	<p>item</p>
+}
