--- a/MusicForum/Views/Comments/Create.cshtml
+++ b/MusicForum/Views/Comments/Create.cshtml
@@ -12,6 +12,9 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <input type="hidden" name="DiscussionId" value="@ViewBag.DiscussionId"/>
+
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
                 <input asp-for="Content" class="form-control" />
@@ -22,10 +25,10 @@
                 <input asp-for="CreateDate" class="form-control" />
                 <span asp-validation-for="CreateDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DiscussionId" class="control-label"></label>
-                <select asp-for="DiscussionId" class ="form-control" asp-items="ViewBag.DiscussionId"></select>
-            </div>
+            @* <div class="form-group"> *@
+            @*     <label asp-for="DiscussionId" class="control-label"></label> *@
+            @*     <select asp-for="DiscussionId" class ="form-control" asp-items="ViewBag.DiscussionId"></select> *@
+            @* </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
