--- a/MusicForum/Views/Discussions/Details.cshtml
+++ b/MusicForum/Views/Discussions/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Details";
+    string imageUrl = Url.Content("/photos/" + Model.ImageFileName);
 }
 
 <h1>Details</h1>
@@ -9,6 +10,9 @@
 <div>
     <h4>Discussion</h4>
     <hr />
+    <div className="mb-5" align="center">
+        <img src=@imageUrl class="img-fluid" alt="@Model.Title" />
+    </div>
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
