displaying discussions + photos on home can see discussion details by clicking

--- a/MusicForum/Views/Discussions/Index.cshtml
+++ b/MusicForum/Views/Discussions/Index.cshtml
@@ -29,7 +29,7 @@
     </thead>
     <tbody>
         @foreach (var item in Model) {
-            string imageUrl = Url.Content("/discussions/" + item.ImageFileName);
+            string imageUrl = Url.Content("/photos/" + item.ImageFileName);
             <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
@@ -45,7 +45,6 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.DiscussionId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.DiscussionId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.DiscussionId">Delete</a>
             </td>
         </tr>
