--- a/MusicForum/Views/Home/DiscussionDetails.cshtml
+++ b/MusicForum/Views/Home/DiscussionDetails.cshtml
@@ -6,18 +6,13 @@
 }
 
 <div class="row">
-
     <div class="col-xs-1 gap-5">
-
         <div class="mb-5" align="center">
-
-            <img src="@imageUrl" class="img-fluid" alt="@Model.Title" />
+            <img src="@imageUrl" class="img-fluid thumbnail" alt="@Model.Title" />
         </div>
 
         <div class="row">
-
             <div class="mb-4">
-
                 <i class="fa-solid fa-comment"></i>
                 @Html.DisplayFor(model => model.Title)
             </div>
