--- a/MusicForum/Views/Comments/Create.cshtml
+++ b/MusicForum/Views/Comments/Create.cshtml
@@ -15,21 +15,21 @@
 
             <input type="hidden" name="DiscussionId" value="@ViewBag.DiscussionId"/>
 
-            <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="Content" class="form-label"></label>
                 <input asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CreateDate" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="CreateDate" class="form-label"></label>
                 <input asp-for="CreateDate" class="form-control" />
                 <span asp-validation-for="CreateDate" class="text-danger"></span>
             </div>
-            @* <div class="form-group"> *@
-            @*     <label asp-for="DiscussionId" class="control-label"></label> *@
+            @* <div class="mb-3"> *@
+            @*     <label asp-for="DiscussionId" class="form-label"></label> *@
             @*     <select asp-for="DiscussionId" class ="form-control" asp-items="ViewBag.DiscussionId"></select> *@
             @* </div> *@
-            <div class="form-group">
+            <div class="mb-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
