--- a/MusicForum/Views/Home/Index.cshtml
+++ b/MusicForum/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
 
 <div class="footer">
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="footer-text">
             &copy; 2025 - MusicForum - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
