--- a/MusicForum/wwwroot/css/site.css
+++ b/MusicForum/wwwroot/css/site.css
@@ -1,3 +1,7 @@
+.navbar {
+    background-color: dodgerblue;
+}
+
 .thumbnail {
     max-width: 300px;
     height: auto;
@@ -46,9 +50,11 @@ html, body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    background-color: antiquewhite;
 }
 
 .main-content {
+    
     flex: 1;
     overflow: auto;
     padding-bottom: 100px;
@@ -60,7 +66,14 @@ html, body {
     width: 100%;
     height: 60px;
     line-height: 60px;
-    background-color: #f5f5f5;
+    background-color: red;
+    align-content: center;
+}
+
+.footer-text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 11px;
+    line-height: 60px;
 }
 
 @media (max-width: 768px) {
