--- a/MusicForum/Views/Home/DiscussionDetails.cshtml
+++ b/MusicForum/Views/Home/DiscussionDetails.cshtml
@@ -5,44 +5,51 @@
     string imageUrl = Url.Content("/photos/" + Model.ImageFileName);
 }
 
-<div class="row">
-    <div class="col-xs-1 gap-5">
-        <div class="mb-5" align="center">
-            <img src="@imageUrl" class="img-fluid thumbnail" alt="@Model.Title" />
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12 col-md-3 text-center mb-5">
+            <img src="@imageUrl" class="img-fluid thumbnail rounded-circle" alt="@Model.Title" />
         </div>
 
-        <div class="row">
-            <div class="mb-4">
-                <i class="fa-solid fa-comment"></i>
-                @Html.DisplayFor(model => model.Title)
+        <div class="col-12 col-md-9">
+            <div class="card shadow-sm">
+                <div class="card-header">
+                    <h4 class="card-title"><i class="fa-solid fa-comment"></i> @Html.DisplayFor(model => model.Title)</h4>
+                    <p class="card-subtitle text-muted">
+                        <i class="fa-regular fa-calendar"></i> Created @Model.CreateDate.ToString("MMM d yyyy")
+                    </p>
+                </div>
+                <div class="card-body">
+                    <p>@Html.DisplayFor(model => model.Content)</p>
+                </div>
             </div>
 
-            <div class="mb-3">
-                <i class="fa-solid fa-comment"></i>
-                @Html.DisplayFor(model => model.Content)
-            </div>
-
-            <div class="mb-3">
-                <p>
-                    <i class="fa-regular fa-calendar"></i>
-                    Created @Model.CreateDate.ToString("MMM d yyyy")
-                </p>
-            </div>
-
-            <div className="mb-3">
-                <i class="fa-solid fa-tag"></i>
-                @Html.DisplayNameFor(model => model.Comments)
-
-            </div>
-
-            <div class="mb-3">
-                @if (Model.Comments != null)
-                {
-                    foreach (var comment in Model.Comments)
+            <div class="mt-4">
+                <h5><i class="fa-solid fa-tag"></i> Comments</h5>
+                <div>
+                    @if (Model.Comments != null && Model.Comments.Any())
                     {
-                        <span class="pe-2 btn btn-primary btn-secondary">@comment.Content <a asp-controller="Comments" asp-action="" asp-route-id="@comment.CommentId"></a></span>
+                        foreach (var comment in Model.Comments)
+                        {
+                            <div class="card mt-3">
+                                <div class="card-body">
+                                    <p>@comment.Content</p>
+                                    <p>@comment.CreateDate</p>
+                                </div>
+                      
+
+                            </div>
+                        }
                     }
-                }
+                    else
+                    {
+                        <p>No comments yet. Be the first to comment!</p>
+                    }
+                    <div class="mt-3">
+                        <a asp-controller="Comments" asp-action="Create" asp-route-id="@Model.DiscussionId" class="me-2 btn btn-light">Add Comment</a>
+                        
+                    </div>
+                </div>
             </div>
         </div>
     </div>
