--- a/MusicForum/Views/Discussions/Edit.cshtml
+++ b/MusicForum/Views/Discussions/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 class="home-header">RPM</h1>
 
-<h4>Discussion</h4>
+<h4 class="discussion-title">Edit Discussion Details</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,23 +15,25 @@
             <input type="hidden" asp-for="DiscussionId" />
 
             <div class="mb-3">
-                <label asp-for="Title" class="form-control"></label>
-                <input asp-for="Title" class="form-control" />
+                <div class="mt-4">
+                    <label asp-for="Title" class="comment"></label>
+                </div>
+                <input asp-for="Title" class="comment" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+
             <div class="mb-3">
-                <label asp-for="Content" class="form-control"></label>
+                <label asp-for="Content" class="comment"></label>
                 <input asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
+            
+
             <div class="mb-3">
-                <label asp-for="ImageFileName" class="form-control"></label>
-                <input asp-for="ImageFileName" class="form-control" />
-                <span asp-validation-for="ImageFileName" class="text-danger"></span>
-            </div>
-            <div class="mb-3">
-                <label asp-for="CreateDate" class="form-control"></label>
-                <input asp-for="CreateDate" class="form-control" />
+                <label asp-for="CreateDate" class="comment"></label>
+                <div>
+                    <input asp-for="CreateDate" class="form-control" />
+                </div>
                 <span asp-validation-for="CreateDate" class="text-danger"></span>
             </div>
             <div class="mb-3">
