--- a/MusicForum/Views/Discussions/Create.cshtml
+++ b/MusicForum/Views/Discussions/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create new Thread</h1>
+<h1 class="discussion-title">Create new Thread</h1>
 
 
 <hr />
@@ -12,14 +12,14 @@
     <div class="col-md-4">
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="mb-3">
+            <div class="mb-5">
                 <label asp-for="Title" class="discussion-title"></label><br />
-                <input asp-for="Title" class="mb-3" />
+                <input asp-for="Title" class="mb-3 title-width" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-            <div class="mb-3">
+            <div class="mb-5">
                 <label asp-for="Content" class="discussion-title"></label><br />
-                <input asp-for="Content" class="comment-box" />
+                <textarea asp-for="Content" class="comment-box"> </textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             
