--- a/MusicForum/Views/Home/DiscussionDetails.cshtml
+++ b/MusicForum/Views/Home/DiscussionDetails.cshtml
@@ -24,9 +24,9 @@
                 </div>
             </div>
 
-            <div class="mt-4">
-                <h5 class="discussion-title"> Comments</h5>
-                <div>
+            <div class="comments-section">
+                <h5 class="discussion-title">Comments</h5>
+                <div class="comments-content">
                     @if (Model.Comments != null && Model.Comments.Any())
                     {
                         foreach (var comment in Model.Comments)
@@ -36,8 +36,6 @@
                                     <p>@comment.Content</p>
                                     <p>@comment.CreateDate</p>
                                 </div>
-                      
-
                             </div>
                         }
                     }
@@ -45,11 +43,11 @@
                     {
                         <p>No comments yet. Be the first to comment!</p>
                     }
-                    <div class="mt-3">
-                        <a asp-controller="Comments" asp-action="Create" asp-route-id="@Model.DiscussionId" class="me-2 btn btn-light">Add Comment</a>
-                        
-                    </div>
                 </div>
+            </div>
+
+            <div class="mt-3 text-center">
+                <a asp-controller="Comments" asp-action="Create" asp-route-id="@Model.DiscussionId" class="create-button">Add Comment</a>
             </div>
         </div>
     </div>
