re-added styling from unsaved commit

--- a/MusicForum/Views/Home/Index.cshtml
+++ b/MusicForum/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     RPM<br />
 </div>
 <p>
-    A place to discuss the albums that have influenced you...
+    Music nerds everywhere! <br /> A place to discuss your favourite albums!
     <hr />
 </p>
 
@@ -66,20 +66,3 @@
     </footer>
 </div>
 
-<style>
-    .created-and-comments {
-        display:flex;
-        align-items: center;
-        margin-top: 15px;
-    }
-
-    .created-and-comments .verticalLine {
-        border-left: 1px solid #000;
-        height: 1.5em;
-        margin: 0 10px;
-    }
-
-    .discussion-comments {
-        margin-top: 15px;
-    }
-</style>
