--- a/MusicForum/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/MusicForum/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -15,11 +15,26 @@
                 <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
                 <label asp-for="Username" class="form-label"></label>
             </div>
+
+            @* <div class="form-floating mb-3"> *@
+            @*     <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/> *@
+            @*     <label asp-for="Input.PhoneNumber" class="form-label"></label> *@
+            @*     <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span> *@
+            @* </div> *@
+
             <div class="form-floating mb-3">
-                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
-                <label asp-for="Input.PhoneNumber" class="form-label"></label>
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                <input asp-for="Input.Nickname" class="form-control" />
+				<label asp-for="Input.Nickname" class="form-label"></label>
             </div>
+            <div class="form-floating mb-3">
+				<input asp-for="Input.FavouriteAlbum" class="form-control" placeholder="Tell us your favourite album."/>
+				<label asp-for="Input.FavouriteAlbum" class="form-label"></label>
+            </div>
+			<div class="form-floating mb-3">
+				<input asp-for="Input.Location" class="form-control" placeholder="Where do you live?" />
+				<label asp-for="Input.Location" class="form-label"></label>
+            </div>
+
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
         </form>
     </div>
