--- a/MusicForum/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MusicForum/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,6 +12,25 @@
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+
+            <div class="form-floating">
+                <input asp-for="Input.Name" class="form-control" />
+				<label asp-for="Input.Name">Name</label>
+				<span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating">
+                <input asp-for="Input.FavouriteAlbum" class="form-control" />
+				<label asp-for="Input.FavouriteAlbum">Favourite Album</label>
+				<span asp-validation-for="Input.FavouriteAlbum" class="text-danger"></span>
+            </div>
+
+			<div class="form-floating">
+				<input asp-for="Input.Location" class="form-control" />
+				<label asp-for="Input.Location">Location</label>
+				<span asp-validation-for="Input.Location" class="text-danger"></span>
+			</div>
+
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
