--- a/MusicForum/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MusicForum/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = " ";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -9,24 +9,24 @@
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h1>Create a new account</h1>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
-            <div class="form-floating">
-                <input asp-for="Input.Name" class="form-control" />
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Name" class="form-control" aria-required="true" placeholder="Name" />
 				<label asp-for="Input.Name">Name</label>
 				<span asp-validation-for="Input.Name" class="text-danger"></span>
             </div>
 
-            <div class="form-floating">
-                <input asp-for="Input.FavouriteAlbum" class="form-control" />
+            <div class="form-floating mb-3">
+                <input asp-for="Input.FavouriteAlbum" class="form-control" aria-required="true" placeholder="Favourite Album" />
 				<label asp-for="Input.FavouriteAlbum">Favourite Album</label>
 				<span asp-validation-for="Input.FavouriteAlbum" class="text-danger"></span>
             </div>
 
-			<div class="form-floating">
-				<input asp-for="Input.Location" class="form-control" />
+			<div class="form-floating mb-3">
+                <input asp-for="Input.Location" class="form-control" aria-required="true" placeholder="Location" />
 				<label asp-for="Input.Location">Location</label>
 				<span asp-validation-for="Input.Location" class="text-danger"></span>
 			</div>
@@ -49,36 +49,36 @@
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
+    @* <div class="col-md-6 col-md-offset-2"> *@
+    @*     <section> *@
+    @*         <h3>Use another service to register.</h3> *@
+    @*         <hr /> *@
+    @*         @{ *@
+    @*             if ((Model.ExternalLogins?.Count ?? 0) == 0) *@
+    @*             { *@
+    @*                 <div> *@
+    @*                     <p> *@
+    @*                         There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article *@
+    @*                         about setting up this ASP.NET application to support logging in via external services</a>. *@
+    @*                     </p> *@
+    @*                 </div> *@
+    @*             } *@
+    @*             else *@
+    @*             { *@
+    @*                 <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal"> *@
+    @*                     <div> *@
+    @*                         <p> *@
+    @*                             @foreach (var provider in Model.ExternalLogins!) *@
+    @*                             { *@
+    @*                                 <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button> *@
+    @*                             } *@
+    @*                         </p> *@
+    @*                     </div> *@
+    @*                 </form> *@
+    @*             } *@
+    @*         } *@
+    @*     </section> *@
+    @* </div> *@
 </div>
 
 @section Scripts {
