--- a/MusicForum/Views/Discussions/Edit.cshtml
+++ b/MusicForum/Views/Discussions/Edit.cshtml
@@ -25,7 +25,7 @@
             <div class="mb-3">
                 <label asp-for="Content" class="comment"></label>
                 <input asp-for="Content" class="form-control" />
-                <span asp-validation-for="Content" class="text-danger"></span>
+                
             </div>
             
 
@@ -37,7 +37,7 @@
                 <span asp-validation-for="CreateDate" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="b" />
             </div>
             <hr />
             
