Fixed database. UserId displaying in discussion table

--- a/MusicForum/Views/Comments/Details.cshtml
+++ b/MusicForum/Views/Comments/Details.cshtml
@@ -7,10 +7,11 @@ namespace MusicForum.Controllers
 {
     public class HomeController : Controller
     {
-        private readonly MusicForumContext _context;
+        private readonly 
+        _context;
 
         // Constructor
-        public HomeController(MusicForumContext context)
+        public HomeController(RPMForumContext context)
         {
             _context = context;
         }
